# wasm-rust-demo

./: .gitignore  README.md
crate/: Cargo.toml  README.md
crate/pkg/: package.json  wasm_rust_demo_rs.d.ts  wasm_rust_demo_rs.js  wasm_rust_demo_rs_bg.js  wasm_rust_demo_rs_bg.wasm  wasm_rust_demo_rs_bg.wasm.d.ts
crate/src/: channels.rs  colour_spaces.rs  effects.rs  filters.rs  helpers.rs  iter.rs  lib.rs
demos/hello-wasm/: Cargo.toml
demos/hello-wasm/pkg/: hello_wasm_bg.js  hello_wasm_bg.wasm  package.json
demos/hello-wasm/www/: index.js  package-lock.json  package.json
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.js  constants.js
www/: index.html  index.js  package-lock.json  package.json
